[package]
name = "ssdbench"
version = "0.1.0"
edition = "2021"
authors = ["ZhangYunHao <zhangyunhao116@gmail.com>"]

repository = "https://github.com/zhangyunhao116/fstd"
description = "Lightweight SSD benchmark written in Rust."
license = "MIT OR Apache-2.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.18"
fstd = "0.1.2"
